--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "proxy": "http://localhost:5000"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "react": "^19.1.0",
